--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cheerio": "1.0.0-rc.11",
     "html-to-image": "1.9.0",
     "lodash": "4.17.21",
-    "node-html-to-image": "3.2.4"
+    "node-html-to-image": "3.2.4",
+    "rectangle-overlap": "2.0.0"
   }
 }
